# cpp-submodules

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  vcpkg.json
.github/workflows/: cmake-build.yml  windows-x64-cmake-release.yml
Configuration/: CMakeLists.txt
Configuration/Include/Configuration/: ConfigurationModule.h  Manager.h
Configuration/Modules/Private/: Manager.cppm  Manager.mxx
Configuration/Modules/Public/: Manager.ixx
Configuration/Source/: Manager.cpp
Configuration/Source/Private/: ConfigurationModule.hpp  Manager.cxx
Configuration/Source/Public/: Manager.ixx
Coroutine/: CMakeLists.txt
Coroutine/Modules/Private/: CoroutineModule.hpp
Coroutine/Modules/Public/: Coroutine.ixx
Coroutine/Source/Public/: Coroutine.ixx  CoroutineModule.hpp
RuntimeInfo/: CMakeLists.txt
RuntimeInfo/Modules/Private/: ExecutionCounter.cppm  Manager.cppm  RuntimeInfoModule.hpp
RuntimeInfo/Modules/Public/: ExecutionCounter.ixx  Manager.ixx
RuntimeInfo/Source/Private/: ExecutionCounter.cxx  Manager.cxx  RuntimeInfoModule.hpp
RuntimeInfo/Source/Public/: ExecutionCounter.ixx  Manager.ixx
SocketService/: CMakeLists.txt
SocketService/Include/: Client.ixx  IInterface.ixx  Service.ixx  Session.ixx
SocketService/Source/: Client.cxx  IInterface.cxx  Server.cxx  Service.cxx  Session.cxx
SocketService/Source/Private/: Client.cxx  IInterface.cxx  Server.cxx  Service.cxx  Session.cxx  SocketServiceModule.hpp
SocketService/Source/Public/: Client.ixx  IInterface.ixx  Server.ixx  Service.ixx  Session.ixx  SocketServiceModule.hpp
Tests/: CMakeLists.txt
Tests/Benchmark/: CMakeLists.txt
Tests/Benchmark/Include/Benchmark/: Configuration.h  Containers.h
Tests/Benchmark/Source/: Benchmark.cpp
Tests/SubmodulesBenchmark/: CMakeLists.txt
Tests/SubmodulesBenchmark/Include/SubmodulesBenchmark/: Configuration.h
Tests/SubmodulesBenchmark/Modules/Private/: Configuration.ixx  SubmodulesBenchmark.cpp  SubmodulesBenchmark.mxx  Timer.hpp  Timer.ixx
Tests/SubmodulesBenchmark/Source/: SubmodulesBenchmark.cpp
Tests/SubmodulesBenchmark/Source/Private/: Configuration.hpp  SubmodulesBenchmark.cpp  Timer.hpp
Tests/SubmodulesUnit/: CMakeLists.txt
Tests/SubmodulesUnit/Include/SubmodulesUnit/: Configuration.h
Tests/SubmodulesUnit/Modules/Private/: Configuration.hpp  Configuration.ixx  SubmodulesUnit.cpp  SubmodulesUnit.mxx  Timer.hpp  Timer.ixx
Tests/SubmodulesUnit/Source/: SubmodulesUnit.cpp
Tests/SubmodulesUnit/Source/Private/: Configuration.hpp  SubmodulesUnit.cpp  Timer.hpp
Tests/Unit/: CMakeLists.txt
Tests/Unit/Include/Unit/: Configuration.h
Tests/Unit/Source/: Unit.cpp
ThreadPool/: CMakeLists.txt
ThreadPool/Source/Private/: ThreadPool.cxx  ThreadPoolModule.hpp
ThreadPool/Source/Public/: ThreadPool.ixx
Timer/: CMakeLists.txt
Timer/Include/Timer/: Manager.h  Parameters.h  Timer.h  TimerManager.h  TimerModule.h  TimerObject.h  TimerParameters.h  TimerTags.h
Timer/Modules/Private/: Manager.cppm  Manager.mxx  Object.cppm  Object.ixx  Object.mxx
Timer/Modules/Public/: ExecutionCounter.ixx  Manager.ixx  Parameters.ixx
Timer/Source/: Manager.cpp  Object.cpp  Object.h  Timer.cpp  TimerManager.cpp  TimerObject.cpp  TimerObject.h
Timer/Source/Private/: Manager.cxx
Timer/Source/Public/: Manager.ixx  TimerModule.hpp
