# Author: Lucas Vilas-Boas
# Year: 2023
# Repo: https://github.com/lucoiso/cpp-submodules

# ----------- Global Definitions -----------
SET(LIBRARY_NAME Configuration)

# ------------- Library Setup --------------
SET(SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/Source/Manager.cpp
)

SET(INCLUDE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/Include/${LIBRARY_NAME}/Manager.h
)

ADD_LIBRARY(${LIBRARY_NAME} SHARED ${SOURCE_FILES} ${INCLUDE_FILES})

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Include)
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Include/${LIBRARY_NAME})
TARGET_COMPILE_DEFINITIONS(${LIBRARY_NAME} PRIVATE BUILD_DLL)

FIND_PACKAGE(Boost REQUIRED COMPONENTS json)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PUBLIC Boost::json)