# Author: Lucas Vilas-Boas
# Year: 2023
# Repo: https://github.com/lucoiso/cpp-submodules

# ----------- Global Definitions -----------
SET(LIBRARY_NAME Timer)

# ------------- Library Setup --------------
SET(PRIVATE_MODULES_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Modules/Private)
SET(PUBLIC_MODULES_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Modules/Public)

SET(PRIVATE_MODULES
	${PRIVATE_MODULES_BASE_DIRECTORY}/Manager.cppm
)

SET(PUBLIC_MODULES
	${PUBLIC_MODULES_BASE_DIRECTORY}/Manager.ixx
)

ADD_LIBRARY(${LIBRARY_NAME})
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)

TARGET_SOURCES(${LIBRARY_NAME}
			   PRIVATE
			   FILE_SET cxx_private_modules
			   TYPE CXX_MODULES
			   BASE_DIRS ${PRIVATE_MODULES_BASE_DIRECTORY}
			   FILES ${PRIVATE_MODULES}

			   PUBLIC
			   FILE_SET cxx_public_modules
			   TYPE CXX_MODULES
			   BASE_DIRS ${PUBLIC_MODULES_BASE_DIRECTORY}
			   FILES ${PUBLIC_MODULES}
)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PRIVATE ${PRIVATE_MODULES_BASE_DIRECTORY})
TARGET_COMPILE_DEFINITIONS(${LIBRARY_NAME} PRIVATE BUILD_DLL)
